[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "github-issue-triage"
version = "1.0.0"
description = "OpenEnv-compatible RL environment for GitHub issue triage"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "faker>=24.0.0",
    "openenv-core>=0.2.0",
]

[project.urls]
Repository = "https://github.com/AMIT20-P/Github-issue-Triage"
Space      = "https://huggingface.co/spaces/AmitSJ/github-issue-triage"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*"]

[project.scripts]
server   = "app:start_server"
infer    = "inference:main"
baseline = "baseline:main"
